projekt-compiler/test/builtInCommand/list/success/s_create_list.rail
$'main'(--):
 \
  \
   \---n[one]:[two]:[three]:---o---#