projekt-compiler/test/builtInCommand/list/fail/s_cons_nil.rail
$'main'(--):
 \
  \
   \
    \---n---n:---n:---n:----#